# django-admin-json-editor

./: README.md  pyproject.toml  setup.py
django_admin_json_editor/: __init__.py  admin.py
django_admin_json_editor/static/django_admin_json_editor/: style.css
django_admin_json_editor/templates/django_admin_json_editor/: editor.html
example/app/: admin.py  models.py
example/project/: settings.py
tests/: django_settings.py  test_widget.py
