[tool.poetry]
name = "django-admin-json-editor"
version = "0.1.0"
description = "A simple Django app to add JSON widget into Django Administration."
authors = ["Parham Alvani <parham.alvani@gmail.com>"]
readme = "README.md"
packages = [{ include = "django_admin_json_editor" }]

[tool.poetry.dependencies]
python = "^3.10"
Django = ">= 3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
